# OFTW-Dashboard

./: .gitignore  README.md  app.py  pyproject.toml
assets/: questions.css  script.js
assets/css/: demo.css
assets/js/: 1helpers.js  6main.js
data/: merged.parquet  payments.parquet  pledge_active_arr.parquet  pledges.parquet
data/downloaded_logos/: download_report.txt  logo_mapping.csv  logo_mapping.json  standardized_names.txt
pages/: delete.py  money_moved.py  page1.py  page2.py
pages/layouts/: __init__.py  moneymoved_layout.py  page1_layout.py
utils/: data_loader.py  data_preparer.py  dumbbell_with_logos.py  figure.py  logo_utils.py
