[tool.poetry]
name = "oftw"
version = "0.1.0"
description = "Plotly OFTW App Challenge"
authors = ["justin <jpatel@arkimetrix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^3.0.2"
polars = "^1.27.0"
numpy = "^2.2.4"
dash-ag-grid = "^31.3.1"
dash-bootstrap-components = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
